alteraçao na lista

--- a/Lista_compras.html
+++ b/Lista_compras.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Lista de Compras da Semana</h1>
+    <h1>Lista de Compras da Semana do Acassio</h1>
 
     <ul>
 	
@@ -18,6 +18,8 @@
         <li>Peito de Frango</li>
         <li>Alface Crespa</li>
         <li>Café em Pó</li>
+		<li>Energetico</li>
+		<li>Coca-cola</li>
     </ul>
 
     <p>Não esquecer de conferir o estoque de azeite!</p>
