Alteraçao na lista 004

--- a/Lista_compras.html
+++ b/Lista_compras.html
@@ -24,6 +24,7 @@
 
     <p>Não esquecer de conferir o estoque de azeite!</p>
 	<p>E colocar gasolina no carro</p>
+	<p>Sacar o dinheiro</p>
 	
 
 </body>
