--- a/Lista_compras.html
+++ b/Lista_compras.html
@@ -25,6 +25,7 @@
     <p>Não esquecer de conferir o estoque de azeite!</p>
 	<p>E colocar gasolina no carro</p>
 	<p>Sacar o dinheiro</p>
+	<p>Cortar o cabelo</p>
 	
 
 </body>
